--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>2025 Staff Awards - Vote Now</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.bootstrap5.min.css">
 </head>
+
 <body>
   <header>
     <h1>2025 Staff Recognition Awards</h1>
-    <p>Tap a category • Vote for one colleague • See live results 🔥</p>
+    <p>Tap a category • Vote for one colleague • Live results sync across devices 🔥</p>
   </header>
 
   <main class="categories">
     <div class="category-card" data-category="Most Punctual Staff">
       <h2>Most Punctual Staff</h2>
       <p>Always early, never late ⏰</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
     <div class="category-card" data-category="Team Player of the Year">
       <h2>Team Player of the Year</h2>
       <p>Goes above and beyond 🤝</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
     <div class="category-card" data-category="Office Comedian Award">
       <h2>Office Comedian Award</h2>
       <p>Keeps the office laughing 😂</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
     <div class="category-card" data-category="Rising Star Award (New Staff Showing Rapid Growth)">
       <h2>Rising Star Award</h2>
       <p>New but already shining ⭐</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
     <div class="category-card" data-category="Best Dressed Employee">
       <h2>Best Dressed Employee</h2>
       <p>Always slaying the fit 👔👗</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
     <div class="category-card" data-category="Top Facilitator">
       <h2>Top Facilitator</h2>
       <p>Makes meetings smooth 🎯</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
     <div class="category-card" data-category="Employee of the Year">
       <h2>Employee of the Year</h2>
       <p>Overall legend 🌟</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
     <div class="category-card" data-category="Mr/Ms Dependable">
       <h2>Mr/Ms Dependable</h2>
       <p>You can always count on them 🪨</p>
-      <div class="vote-count">0 votes</div>
+      <div class="vote-count">Loading...</div>
     </div>
   </main>
 
@@ -61,7 +63,7 @@
     <div class="modal-content">
       <span class="close">×</span>
       <h2>Vote for <span id="categoryTitle"></span></h2>
-      <p><strong>You have not voted in this category yet.</strong></p>
+      <div id="voteStatus"></div>
 
       <form id="voteForm">
         <input type="hidden" id="selectedCategory">
@@ -74,10 +76,45 @@
   </div>
 
   <footer>
-    <p>© 2025 • One vote per category • Results update live • Anonymous</p>
+    <p>© 2025 • One vote per category • Live cloud sync • Anonymous</p>
   </footer>
+
+  <!-- Firebase SDK - Paste your full <script> snippet here from setup step 5 -->
+  <script type="module">
+    // Import Firebase modules
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js';
+    import { getFirestore, collection, doc, setDoc, getDoc, onSnapshot } from 'https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js';
+
+
+
+
+
+    // Your config from Firebase console
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCsA8TYa7ZbNwikU8JdJxd0u5z4hbfSb7g",
+      authDomain: "staff-votes-2025.firebaseapp.com",
+      projectId: "staff-votes-2025",
+      storageBucket: "staff-votes-2025.firebasestorage.app",
+      messagingSenderId: "256452941876",
+      appId: "1:256452941876:web:706ac9d404bd1dec999261",
+      measurementId: "G-4FX0DKPJVH"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // Expose to global for script.js
+    window.db = db;
+    window.onSnapshot = onSnapshot;
+    window.collection = collection;
+    window.doc = doc;
+    window.setDoc = setDoc;
+    window.getDoc = getDoc;
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
